--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    hello git
+    hello git - user a edit dòng 9
     <h1>user B edit</h1>
     <h1>user a edit</h1>
 </body>
